fix: z-index to hide bookcard

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -845,3 +845,13 @@ z-index: 1;
     color: #fff;
     background: #78a22f;
 }
+
+#cont{
+  position: relative;
+}
+
+#bestSellers{
+  position: relative;
+  z-index: 2;
+}
+
